<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FFPlayer</string>
    <string name="select_input_file">FFPlayer - please select input file</string>
    <string name="Explorer_app_name">FFPlayer</string>
    <string name="processing">Converting . . .</string>
    <string name="type_file">input file</string>
    <string name="input_file_info">File info:</string>
    <string name="convert">Convert</string>
    <string name="delete_src_movie">Delete src movie</string>
    <string name="label_bitrate">Select bitrate:</string>
    <string name="label_input">No video selected</string>
    <string name="label_frames">Frame rate:</string>
    <string name="label_no_data">No data</string>
    <string name="bitrate_128">Bitrate 128kb/s</string>
    <string name="bitrate_512">Bitrate 512kb/s</string>
    <string name="bitrate_1024">Bitrate 1024kb/s</string>
    <string name="label_audio_rate">Audio rate:</string>
    <string name="audiorate_16">Audiorate 16kb/s</string>
    <string name="audiorate_32">Audiorate 32kb/s</string>
    <string name="label_audio_chanels">Audio channels:</string>
    <string name="audio_channels_1">1 audio channel</string>
    <string name="audio_channels_2">2 audio channels</string>
    <string name="framerate">13</string>

    <!-- used between activities to pass input video path -->
    <string name="input_file">Input_file</string>
    <string name="player_menu_about">About</string>
    <string name="player_menu_decode_audio">Decode audio</string>
    <string name="URLLabel">URL:</string>
    <string name="startBtnLabel"> Play </string>
    <string name="URLEditTextHint">Target streaming URL...</string>
    <string name="TestStreamingURL">http://10.0.2.2/test.mp4</string>
    <string name="network_src">Network Stream:</string>

</resources>