<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/network_path"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/network_src" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/URLLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/URLLabel"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/NetURL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/URLEditTextHint"
            android:inputType="textUri" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/startBtn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/btn_normal_lblue"
            android:text="@string/startBtnLabel" />
    </LinearLayout>

    <TextView
        android:id="@+id/textview_path"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_no_data" />

</LinearLayout>